--- a/src/Monolegal.Infrastructure.IOC/Monolegal.Infrastructure.IOC.csproj
+++ b/src/Monolegal.Infrastructure.IOC/Monolegal.Infrastructure.IOC.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Monolegal.Infrastructure.DAL\Monolegal.Infrastructure.DAL.csproj" />
+  </ItemGroup>
+
 </Project>
